<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Jogo da Forca</string>
    <string name="novo_jogo">Novo Jogo</string>
    <string name="instrucoes">Instruções</string>
    <string name="sair">Sair</string>
      
    <string name="facil">Fácil</string>
    <string name="medio">Médio</string>
    <string name="dificil">Difícil</string>
    
    <string name="times">Times</string>
    <string name="paises">Países</string>
    <string name="animais">Animais</string>
    <string name="objetos">Objetos</string>
    <string name="profissoes">Profissões</string>
    <string name="frutas">Frutas</string>
    <string name="continuar">Continuar</string>
    <string name="action_settings">Settings</string>

</resources>
